# levio

./: .gitignore  CITATION.cff  LICENSE  README.md
levio_gap9_project/: CMakeLists.txt  README.md  main.c  sdk.config
levio_gap9_project/definitions/: config.h  logging.h  matrix.c  matrix.h  matrix3.c  matrix3.h  pose_graph.c  pose_graph.h  prng.c  prng.h  sorting.c  sorting.h  transformation.c  transformation.h  type_definitions.h  vio_definitions.c  vio_definitions.h  work_memory.c  work_memory.h
levio_gap9_project/feature_handling/: bf_matcher.c  bf_matcher.h  orb.c  orb.h  orb_bit_pattern.h  orb_gap.c  orb_gap.h
levio_gap9_project/optimizer/: imu_bias_optimization.c  imu_bias_optimization.h  imu_calibration.c  imu_calibration.h  imu_optimization.c  imu_optimization.h  imu_preintegration.c  imu_preintegration.h  pose_graph_optimizer.c  pose_graph_optimizer.h
levio_gap9_project/scripts/: prepare_euroc_data.py  visualize_log.py
levio_gap9_project/visual_odometry/: epnp.c  epnp.h  essential_matrix.c  essential_matrix.h  triangulation.c  triangulation.h  vo.c  vo.h
levio_python_model/: README.md  environment.yml  main_levio.py
levio_python_model/utilities/: draw_trajectory.py  rosbag_extractor.py
levio_python_model/vio_pipeline_segments/: factor_graph.py  gtsam_optimizer.py  vio_initialization.py  vo_frontend.py
